add als,amcl localization launch and hector, rtabmap slam algo

--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,10 @@
   <depend>roscpp</depend>
 
   <exec_depend>gmapping</exec_depend>
+  <exec_depend>hector_mapping</exec_depend>
+  <exec_depend>rtabmap_ros</exec_depend>
+  <exec_depend>amcl</exec_depend>
+  <exec_depend>als_ros</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>rosbag</exec_depend>
   <exec_depend>pointcloud_to_laserscan</exec_depend>
