--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,6 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>rosbag</exec_depend>
   <exec_depend>pointcloud_to_laserscan</exec_depend>
-  <exec_depend>ira_laser_tools</exec_depend>
+  <exec_depend>concatenate_pcl2</exec_depend>
 
 </package>
