--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <exec_depend>hector_mapping</exec_depend>
   <exec_depend>rtabmap_ros</exec_depend>
   <exec_depend>amcl</exec_depend>
+  <exec_depend>gmcl</exec_depend>
   <exec_depend>als_ros</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>rosbag</exec_depend>
